Stabilize admin users page